--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mapbox-gl": "^1.9.1",
     "moment": "^2.24.0",
     "react": "^16.13.1",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
     "react-scripts": "3.4.1"
